fix navbar title spacing to match text

--- a/custom.css
+++ b/custom.css
@@ -54,3 +54,11 @@ footer {
 .meie {
     text-align: center;
 }
+
+.order-header {
+    padding: 30px;
+}
+
+.order-information {
+    padding: 30px;
+}
